edited markdown comments

--- a/eda-topic-modeling-where-candidates-focus.ipynb
+++ b/eda-topic-modeling-where-candidates-focus.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load the data - Use \"cp1252\" encoding. It is the most complete encoding for special characters / fancy apostrophes."
+    "## Load the data - it is encoded in cp1252."
    ]
   },
   {
